# lidar_augmentation_cpp_ws

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  README.md  command.txt  tree.txt
docker/: entrypoint.sh
src/lidar_augmentation/: CMakeLists.txt  package.xml
src/lidar_augmentation/config/: rosbag_test_config.yaml
src/lidar_augmentation/include/lidar_augmentation/: augmentation_methods.h  imu_synchronizer.h  lidar_augmenter_node.h  point_cloud_processor.h
src/lidar_augmentation/launch/: augmenter_cpp.launch  rosbag_augmentation.launch
src/lidar_augmentation/rviz/: rosbag_visualization.rviz
src/lidar_augmentation/scripts/tools/: lidar_augmentation_statistics_subscriber.py  lidar_augmentation_visualizer.py  lidar_bev_visualizer.py  stat.txt  topic_diagnostics.py
src/lidar_augmentation/src/: augmentation_methods.cpp  imu_synchronizer.cpp  lidar_augmenter_node.cpp  lidar_augmenter_node_main.cpp  point_cloud_processor.cpp
src/lidar_augmentation/test/cpp/: tes_results.txt  test_augmentation_methods.cpp  test_integration.cpp  test_point_cloud_processor.cpp
src/lidar_augmentation/test/launch/: test_integration.launch
